--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  flutter_svg: ^0.17.4
+  flutter_svg: ^0.18.0
   google_fonts: ^1.1.0
   http: ^0.12.2
 
@@ -51,7 +51,7 @@ flutter:
   assets:
     - assets/ripple.gif
     - assets/spinner.gif
-    - assets/icons
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
